--- a/still.css
+++ b/still.css
@@ -6,6 +6,11 @@ thead {color: #ffca86;}
 
 tbody {background-color:#ffca86;} 
 
-tbody {color:#baaf96;} 
+tbody {color:#baaf96;}
+
+footer > a {
+text-decoration: none; }
+
+footer > a:hover {color:#ff2400;} 
 
 
